# ndfft_test

./: Cargo.toml  README.md
benches/: axis_inner  axis_outer  fft2d.rs
src/: lib.rs  main.rs  ndfft_with_ndrustfft.rs  ndfft_with_transpose.rs  test_array.rs
src/transpose/: inplace.rs  mod.rs  outofplace.rs
